    -------------------

          06-05-19  Bfo     Version changed to V3.32
          06-05-19  Bfo     Use "procid_adapted.h" / "errno_adapted.h"
          06-05-25  Bfo     Some path movements for PTOC system
          06-05-25  Bfo     '.pch', '.r', '.x' are also CWIE TEXT files now
          06-05-26  Bfo     "Resource Constants.h" renamed to "ResourceConstants.h"
          06-05-26  Bfo     Separate mcp files for PTOC
          06-05-27  Bfo     makefile => 'MPS ' / 'TEXT'
          06-06-01  Bfo     Linux makefile corrected: Changed -I- to iquote
          06-06-01  Bfo     Some signedness warnings of GCC 4.0 eliminated 
    3.32  06-??-??  Bfo
    ------------------- 
      
*/




/* unresolved bugs: */
/*
    !!  "_" name convention on Windows (hawk_C0).
    
    -   MPW uses its I/O currently partly also for the tty/pty system.
    -   "mgencas" will not startup over network (Linux), "mme" has also problems.
    -   Linux telnet close still quits emulator (recognition of end cond not correctly)
    -   "inetd" superdaemon is not yet running correctly.
    -   A$AtDate restricted to 248 days / will not adjust when system time changes

   (+)  Take tty00/pty00 first (problems with arbitration)
   (+)  setime_Y2K version with param passing --> 1900
*/


/* To do: */
/*
    -   RBF disk cache not yet implemented.
    -   RBF: do read only, if write larger than a sector
    -   SCSI subsystem for Linux
    -   direct line editing on linux (over network)
    -   CtrlC/CtrlE support for Linux not yet done
    -   gs_ready Linux for CR
    -   Faster directory read (Windows)
    -   Implement internal command "ls" in UNIX style: "ls -la".
    -   <in_recursion> for debug load
    -   btree for Mac
    -   btree optimisation
    -   termcap support for the DOS window.
    -   fix the msnap mouse blocker problem.
    -   fix the "mmore" MGR scroll problem.

   (+)  return of d1.l from pipe-systasks
   (+)  passing of d2.l to pipe open
*/