@@ -1300,7 +1300,9 @@
           06-05-26  Bfo     Separate mcp files for PTOC
           06-05-27  Bfo     makefile => 'MPS ' / 'TEXT'
           06-06-01  Bfo     Linux makefile corrected: Changed -I- to iquote
-          06-06-01  Bfo     Some signedness warnings of GCC 4.0 eliminated 
+          06-06-01  Bfo     Some signedness warnings of GCC 4.0 eliminated
+          06-06-01  Bfo     'printf' things commented out
+          06-06-01  Bfo     g_ipAddr variable added (preparations) 
     3.32  06-??-??  Bfo
     ------------------- 
       
